# billappen

./: .gitignore  CLAUDE.md  ROAD_SIGNS_SETUP.md  initial-prompt  question.js
questions-generator/forerkortet-tools/: .env.example  .gitignore  README.md  env.example  import_signs_to_supabase.py  pyproject.toml
questions-generator/forerkortet-tools/data/input/sample-questions/: 1.html  10.html  2.html  3.html  4.html  5.html  6.html  7.html  8.html  9.html
questions-generator/forerkortet-tools/data/input/theory-book-html/: 1 - Introduksjon.html  1.1.1 - Øvelseskjøring.html  1.2.1 - Hvem kan ta førerkort_.html  1.2.2 - Hvem kan ta førerkort_.html  1.3.1 - Førerkortklasser.html  1.3.2 - Førerkortklasser.html  1.4.1 - Oppsummering.html  10 - Introduksjon.html  10.1.1 - Fareskilt.html  10.1.3 - Fareskilt.html  10.1.4 - Fareskilt.html  10.1.5 - Fareskilt.html  10.1.6 - Fareskilt.html  10.1.7 - Fareskilt.html  10.2.1 - Vikeplikt- og forkjørsskilt.html  10.3.1 - Forbudsskilt.html  10.3.2 - Forbudsskilt.html  10.3.4 - Forbudsskilt.html  10.3.5 - Forbudsskilt.html  10.3.6 - Forbudsskilt.html  10.3.7 - Forbudsskilt.html  10.4.1 - Påbudsskilt.html  10.4.2 - Påbudsskilt.html  10.5.1 - Opplysningsskilt.html  10.5.2 - Opplysningsskilt.html  10.5.3 - Opplysningsskilt.html  10.5.4 - Opplysningsskilt.html  10.5.5 - Opplysningsskilt.html  10.5.6 - Opplysningsskilt.html  10.5.7 - Opplysningsskilt.html  10.5.8 - Opplysningsskilt.html  10.6.1 - Serviceskilt.html  10.6.2 - Serviceskilt.html  10.6.3 - Serviceskilt.html  10.6.4 - Serviceskilt.html  10.7.1 - Vegvisningsskilt.html  10.7.10 - Vegvisningsskilt.html  10.7.2 - Vegvisningsskilt.html  10.7.3 - Vegvisningsskilt.html  10.7.4 - Vegvisningsskilt.html  (+118 more)
questions-generator/forerkortet-tools/src/forerkortet_tools/: __init__.py  __main__.py
questions-generator/forerkortet-tools/src/forerkortet_tools/cli/: __init__.py  html_converter_cli.py  main.py  question_generator_cli.py  road_signs_cli.py
questions-generator/forerkortet-tools/src/forerkortet_tools/html_converter/: __init__.py  converter.py
questions-generator/forerkortet-tools/src/forerkortet_tools/question_generator/: __init__.py  generator.py  markdown_reader.py  models.py  openai_client.py  road_signs_generator.py
questions-generator/forerkortet-tools/src/forerkortet_tools/road_signs/: __init__.py  models.py  scraper.py
questions-generator/forerkortet-tools/src/forerkortet_tools/utils/: __init__.py  (+2 more)
questions-generator/forerkortet-tools/tests/: __init__.py  conftest.py
questions-generator/forerkortet-tools/tests/unit/: test_html_converter.py  test_models.py
(+384 files in other folders)
